0032437: Coding Rules - eliminate MinGW warning -Wmaybe-uninitialized